--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,31 @@
   text-align: center;
 }
 
+.bg-img {
+  background-image: url('../public/assets/bg1.jpg');
+  min-height: 100vh;
+  position: relative;
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+}
+
+.main {
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+}
