--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+
 .App {
   text-align: center;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .bg-img {
@@ -20,7 +23,8 @@
   background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
   color: white;
   font-weight: bold;
-  border: 3px solid #f1f1f1;
+  border: 3px solid #f3a8db;
+  border-radius: 10px;
   position: absolute;
   top: 50%;
   left: 50%;
