--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
-
-.App {
-  text-align: center;
-  font-family: 'Quicksand', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
+*, *::after, *::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.bg-img {
-  background-image: url('../public/assets/bg1.jpg');
-  min-height: 100vh;
-  position: relative;
-  /* Center and scale the image nicely */
+body {
+  font-family: "Quicksand", sans-serif;
+}
+
+.header {
+  padding: 0.5em;
+}
+.header h1 {
+  font-size: 16px;
+}
+
+.image-section {
+  background-image: url("../public/assets/bg1.jpg");
+  height: 150px;
   background-position: center;
-  background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
-  filter: blur(8px);
-  -webkit-filter: blur(8px);
-}
-
-.main {
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
-  color: white;
-  font-weight: bold;
-  border: 3px solid #f3a8db;
-  border-radius: 10px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  width: 80%;
-  padding: 20px;
-  text-align: center;
-}
+}/*# sourceMappingURL=App.css.map */
